Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -838,9 +838,7 @@ Durch einen verrückten Zufall werden der neurotische Kragenbär Patrick (Stimme
      <a href="https://tv.vitaforas.de/baymax.mp4">
 <img src="https://tv.vitaforas.de/baymax.jpg" alt="7" width="100%" height="auto"></a>
 
-
 In „Baymax – Robowahobu in Serie“ 
-
 
  <p>         
 </p>
@@ -850,6 +848,7 @@ erlebt der 14-jährige Hiro Hamada immer wieder ungeheuerliche Abenteuer. Stets 
  </p>
 <a href="https://tv.vitaforas.de/s1.mp4">
 <img src="https://tv.vitaforas.de/s1.jpg" alt="34" width="100%" height="auto"></a>
+
   Serie zum Film 👆🏼   
 
 <p>   
@@ -865,19 +864,21 @@ Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, W
 <a href="http://tv.vitaforas.de/wish.mp4">
 <img src="http://tv.vitaforas.de/wish.jpg" alt="1" width="100%" height="auto"></a>
 
+Asha (Stimme im Original: Ariana DeBose), ein 17 Jahre altes sowie durch und durch optimistisches Mädchen mit einem scharfen Verstand und einer großen Hingabe an ihre Lieben, lebt im sogenannten Königreich der Wünsche, in dem tatsächlich buchstäblich jeder Wunsch in Erfüllung gehen kann. In einem Moment der Verzweiflung schickt sie einen Wunsch in Richtung Himmel, der von einer kosmischen Kraft beantwortet wird: einem kleinen Ball aus unendlicher Energie namens Star (Alan Tudyk). Obwohl Star ein kleiner Unruhestifter ist, begibt er sich mit Asha und ihrer Ziege Valentino (auch Alan Tudyk) auf eine abenteuerliche Reise durch unterschiedliche Welten, um ihre Gemeinschaft zu retten. Gemeinsam stellen sie sich mit dem bösen König Magnifico (Chris Pine) dem größten aller Feinde und beweisen, dass der Wunsch einer entschlossenen Person in Verbindung mit der Magie der Sterne Wunder bewirken kann...
  <p>         
 </p>
 
 <a href="http://tv.vitaforas.de/drachen.mp4">
 <img src="http://tv.vitaforas.de/drachen.jpg" alt="1" width="100%" height="auto"></a>
 
-
+2010: Auf der kleinen Insel Berk, hoch oben im Norden, wird nicht lange gefackelt: Mordsstarke Wikinger müssen ihre Insel vor wilden Drachen beschützen, die ihnen das Leben zur Hölle machen. Auch der schmächtige Teenager Hicks (Daniel Axt), Beiname "der Hüne", ist Feuer und Flamme für die Drachenjagd – nur leider hat er im Umgang mit Waffen zwei linke Hände. Da sein Vater niemand Geringeres ist als Haudrauf "der Stoische" (Dominic Raacke), Häuptling des Wikingerstammes und ein berühmter Drachenjäger, soll Hicks auf der Drachenschule nun auch die raue Kampfkunst der Wikinger erlernen. Doch ehe Hicks – der übrigens ein pfiffiger und begeisterter Tüftler ist – den gefürchteten Unterricht antreten kann, wird sein Dorf von einer wilden Drachen-Armada angegriffen. Das ist Hicks' große Chance, einmal einen Drachen zu besiegen und die Ehre seines Vaters zu retten! Mit viel Mut und Köpfchen gelingt es ihm, einen "Nachtschatten", eine der gefährlichsten Drachenarten, abzuschießen. Als Hicks seiner Beute endlich gegenübersteht, traut er seinen Augen kaum: Traurig schnaufend schaut der Drache ihn mit großen Augen an. Statt seinem Vater von seinem bemerkenswerten Fang zu erzählen, freundet sich Hicks mit dem Nachtschatten an. Es ist der Beginn einer Freundschaft, die vor allem Hicks’ Welt auf den Kopf stellt: Ein Wikinger, der einen Drachen zum Freund hat? Das geht gegen alle Regeln der Wikingertradition! Niemals wird sein Vater das akzeptieren…
  <p>         
 </p>
 
 <a href="http://tv.vitaforas.de/sammy.mp4">
 <img src="http://tv.vitaforas.de/sammy.jpg" alt="1" width="100%" height="auto"></a>
 
+Meeresschildkröte Sammy (Stimme: Matthias Schweighöfer) lässt sich nicht lumpen. Eben noch ist er geschlüpft, schon bewahrt er sich und die kleine Shelly (Lena) vor einem bitteren Ende im Schnabel einer fiesen Möwe. Gleich darauf verlieren sich die beiden wieder in den endlosen Weiten des Ozeans. Sammy macht sich auf die Suche nach seiner neuen Freundin. Dabei lernt er den abgefahrenen Schildkrötengenossen Ray (Axel Stein), die Krake Slim (Achim Reichel) und die Katze Fluffy (Stefan Fredrich) kennen. Gemeinsam begibt sich die bunte Truppe auf eine abenteuerliche Reise...
  <p>         
 </p>
 <a href="http://tv.vitaforas.de/scoob.mp4">
@@ -897,6 +898,7 @@ Zwei Filme lang waren Poppy und Branch unzertrennlich. In «Trolls – Gemeinsam
 <a href="http://tv.vitaforas.de/arielle.mp4">
 <img src="http://tv.vitaforas.de/arielle.jpg" alt="1" width="100%" height="auto"></a>
 
+2023: Die Meerjungfrau Arielle (Halle Bailey) ist die Lieblingstochter von König Triton (Javier Bardem), aber auch der eigensinnigste Spross des Herrschers. Immer wieder bricht das junge Mädchen mit der schönen Stimme die Regeln und nähert sich der Welt der Menschen, was in Tritons Reich unter dem Meer streng verboten ist. Ihre Sammlung von Gegenständen, die von den Menschen stammen und sie auf dem Meeresboden gefunden hat, machen sie nur noch neugieriger. Als ein Schiff in Seenot gerät, rettet sie den Prinzen Eric (Jonah Andre Hauer-King) vor dem Ertrinken und verliebt sich in ihn. Auch er verliebt sich in sie, vor allem in ihre zauberhafte Stimme. Damit die beiden eine Zukunft haben, muss Arielle aber an Land. Sie bittet die Meereshexe Ursula (Melissa McCarthy), ihr Beine zu geben. Diese stimmt zu, will aber als Pfand Arielles Stimme. Da Eric Arielle ohne ihre schöne Stimme nicht erkennt, wird sie mit der wohl wichtigsten Entscheidung in ihrem Leben konfrontiert.
  <p>         
 </p>
 
