Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -940,6 +940,14 @@ Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem 
 <img src="https://tv.vitaforas.de/ninja.jpg" alt="1" width="100%" height="auto"></a>
 
 2023: Die Turtle-Brüder versuchen, sich die Liebe von New York City zu verdienen, während sie sich einer Armee von Mutanten entgegenstellen.
+
+<p>         
+</p>
+
+
+<a href="https://zero.vitaforas.de/gnom.mp4">
+<img src="https://zero.vitaforas.de/gnom.jpg" alt="2" width="100%" height="auto"></a>
+
  <p>         
 </p>
     Mail: kontakt@vitaforas.de 
