--- a/index.html
+++ b/index.html
@@ -948,6 +948,8 @@ Das Waisenmädchen Momo lebt allein mit seiner Schildkröte Kassiopeia in einem 
 <a href="https://zero.vitaforas.de/gnom.mp4">
 <img src="https://zero.vitaforas.de/gnom.jpg" alt="2" width="100%" height="auto"></a>
 
+Für Chloe (im Original gesprochen von Becky G.) und ihre Mutter beginnt ein neuer Lebensabschnitt, als sie in ein altes und verfallenes Haus ziehen, das von einer großen Anzahl von Gartenzwergen umsäumt ist. Schon bald bemerken sie und der Nachbarsjunge Liam (Josh Peck), dass sich im Haus seltsame Dinge abspielen – die Zwerge sind nämlich lebendig. Alle zusammen schließen eine tiefe Freundschaft, was auch bitter nötig ist, denn gemeinsam müssen Menschen und Tonfiguren einen drohenden Angriff auf das traute Heim abwehren: Kleine Monster aus einer anderen Welt – genannt Troggs – haben sich nämlich darin eingenistet...
+
  <p>         
 </p>
     Mail: kontakt@vitaforas.de 
