Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1093,14 +1093,18 @@ Patrice Capullo (Uma Thurman) hat ein Problem: Ihre Kunstgalerie wirft kein Geld
 
 Tommy Olson (RJ Mitte) ist ein Jurastudent, der mit einigen körperlichen und mentalen Beeinträchtigungen zu kämpfen hat. Nebenbei versucht er sich irgendwie vom erdrückenden Einfluss seines Vaters, des mächtigen Anwalts Dan Olson (William Mark McCullough), zu lösen. Auch der Rest der Familie – Tommys Mutter (Sue Cremin) sowie seine Schwestern (Ava Bianchi, Jennifer A. Goodman) – lebt in Angst und Schrecken vor Dan. Dann geschieht eine Reihe von Morden in der Umgebung. Wer steckt dahinter und wo liegt das Motiv für die Gräueltaten? Tommy freut sich derweil, von einer Anwaltskanzlei angestellt zu werden, die offenbar nicht nach der Pfeife seines Dads tanzt. Da er bis zum Bestehen seiner Prüfung nicht als vollwertiger Jurist arbeiten darf, lässt seine neue Chefin (Candice Rose) ihn Nachforschungen über ungeklärte Fälle anstellen. Hilfe erhält er dabei von seiner Kollegin Olivia (Kimberly Michelle Vaughn). Kurioserweise scheinen diese Fälle alle miteinander sowie mit dem Tod einer Highschool-Schülerin namens Milly (Rebekah Kennedy) verbunden zu sein …
 
-        <p>
+        
+ <p>         
+</p>
+
 🪄🚧🔧
-</p>
-        <p>
 
+ <p>
 </p>
-        <p>
 
+
+
+ <p>
 </p>
 
 
@@ -1513,11 +1517,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                                                                                 <div class="fields">
                                                                                         <div class="field half">
                                                                                                 <label for="demo-name">Name</label>
-                                                                                                <input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+                                                                                                <input type="text" name="demo-name" id="demo-name" value="" placeholder="Name Guest" />
                                                                                         </div>
                                                                                         <div class="field half">
                                                                                                 <label for="demo-email">Email</label>
-                                                                                                <input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
+                                                                                                <input type="email" name="demo-email" id="demo-email" value="" placeholder="voll@untitled.tld" />
                                                                                         </div>
                                                                                         <div class="field">
                                                                                                 <label for="demo-category">Category</label>
