Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1293,6 +1293,9 @@ Hosted by vitaforas
  <p> # 💰Und gerne Klick<a href="https://www.paypal.me/vitaforas"> HIER</a> und <br /> unterstütze uns mit Verwendungszweck 'Spende' über PayPal 🪙💸</p>    
 
 
+
+<a id="5446654" href="http://www.besucherzaehler-html.de">Besucherzähler</a><script type="text/javascript" language="JavaScript" src="https://www.besucherzaehler-html.de/counter_js.php?account=5446654&style=30"></script>
+
         <p>
 __________
 </p>
