Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@ In einer futuristischen Welt, in der Roboter die Polizeiarbeit übernehmen, erre
  <p>         
 </p>   
      
+     <a href="https://zero.vitaforas.de/bodies.mp4">
+<img src="https://zero.vitaforas.de/bodies.jpg" alt="26" width="100%" height="auto"></a>
+
+Während draußen ein heftiger Hurrikan tobt, feiern sieben Freund*innen im luxuriösen Anwesen der verreisten Eltern von David (Pete Davidson) eine Party. Dabei steht auch eine Partie „Bodies Bodies Bodies“ auf dem Programm: In dem an „Werwolf“ oder „Mafia“ erinnernden Gesellschaftsspiel wird zufällig einer der Mitspielenden als Mörder*in bestimmt – und muss dann, sobald das Licht gelöscht ist, andere durch einfaches tippen auf den Rücken „ermorden“. Nach jeder Runde müssen sich die Überlebenden auf einen möglichen Täter oder eine mögliche Täterin einigen – und wenn sie falsch liegen, wird das Licht wieder ausgeschaltet. Doch dann liegt David plötzlich mit durchtrennter Kehle auf der Veranda – offenbar nimmt einer der Mitspielenden die Sache doch etwas zu ernst. Und wie im titelgebenden Spiel müssen die Partygäste nun in der Realität enthüllen, wer dahintersteckt – denn sonst könnten sie selbst die nächsten Opfer sein…
+
+ <p>         
+</p>   
+     
 
      <a href="https://tv.vitaforas.de/five.mp4">
 <img src="https://tv.vitaforas.de/five.png" alt="10" width="100%" height="auto"></a>
