Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -878,8 +878,23 @@ Wie alle Menschen wird auch Riley von ihren Emotionen geleitet: Freude, Angst, W
 <img src="http://tv.vitaforas.de/wish.jpg" alt="1" width="100%" height="auto"></a>
 
 Asha (Stimme im Original: Ariana DeBose), ein 17 Jahre altes sowie durch und durch optimistisches Mädchen mit einem scharfen Verstand und einer großen Hingabe an ihre Lieben, lebt im sogenannten Königreich der Wünsche, in dem tatsächlich buchstäblich jeder Wunsch in Erfüllung gehen kann. In einem Moment der Verzweiflung schickt sie einen Wunsch in Richtung Himmel, der von einer kosmischen Kraft beantwortet wird: einem kleinen Ball aus unendlicher Energie namens Star (Alan Tudyk). Obwohl Star ein kleiner Unruhestifter ist, begibt er sich mit Asha und ihrer Ziege Valentino (auch Alan Tudyk) auf eine abenteuerliche Reise durch unterschiedliche Welten, um ihre Gemeinschaft zu retten. Gemeinsam stellen sie sich mit dem bösen König Magnifico (Chris Pine) dem größten aller Feinde und beweisen, dass der Wunsch einer entschlossenen Person in Verbindung mit der Magie der Sterne Wunder bewirken kann...
+
  <p>         
 </p>
+
+
+
+<a href="http://zero.vitaforas.de/schlumpf.mp4">
+<img src="http://zero.vitaforas.de/schlumpf.jpg" alt="1" width="100%" height="auto"></a>
+
+
+
+Fröhlich bereiten sich die Einwohner von Schlumpfhausen auf das Fest des Blauen Mondes vor, als sechs der blauen Wichte sich nach einer Ungeschicklichkeit von Clumsy plötzlich mitten im New Yorker Central Park wiederfinden! Papa Schlumpf, Schlumpfine, Schlaubi, Muffi, McTapfer und Clumsy, der Unglücksrabe, werden zu allem Überfluss von ihrem Erzfeind Gargamel (Hank Azaria) in die Großstadt verfolgt. Auf der Flucht vor dem bösen Zauberer landen die Schlümpfe im Gepäck von Patrick Winslow (Neil Patrick Harris), der sie unwissentlich mit in seine Wohnung nimmt. Nach einem ersten Schrecken freunden sich Patrick und seine schwangere Frau (Jayma Mays) mit den schlumpfigen Gästen an und helfen ihnen, den Zauberspruch zu finden, der die magische Pforte zur Rückkehr in den Zauberwald öffnen soll. Doch die Zeit drängt, denn der Blaue Mond geht bald unter...
+
+ <p>         
+</p>
+
+
 
 <a href="http://tv.vitaforas.de/drachen.mp4">
 <img src="http://tv.vitaforas.de/drachen.jpg" alt="1" width="100%" height="auto"></a>
