Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -468,6 +468,15 @@ San Tiburon ist ein sogenanntes „Ubermax“-Gefängnis im äußersten Nordwest
 <img src="https://tv.vitaforas.de/pefas.jpg" alt="2" width="100%" height="auto"></a>
 Robert Bilott ist seit kurzem Partner in einer renommierten Anwaltskanzlei in Cincinnati. Nachdem er von zwei Landwirten aus West Virginia kontaktiert wurde, die glauben, dass das örtliche DuPont-Werk giftige Abfälle auf der Mülldeponie ablädt, das ihre Felder zerstört und ihr Vieh vergiftet, gerät er in einen Konflikt. In der Hoffnung, die Wahrheit über die Geschehnisse zu erfahren, reicht Bilott mithilfe seines leitenden Partners der Firma, Tom Terp, eine Beschwerde ein, die den Beginn eines epischen 15-jährigen Kampfes markiert. Ein Kampf, der nicht nur seine Beziehung zu seiner Frau Sarah, sondern auch seinen Ruf, seine Gesundheit und seinen Lebensunterhalt auf die Probe stellt.
 
+
+ <p>         
+</p>         
+
+     <a href="https://zero.vitaforas.de/homefront.mp4">
+<img src="https://zero.vitaforas.de/homefront.jpg" alt="26" width="100%" height="auto"></a>
+
+Seiner Vergangenheit kann keiner so schnell entkommen, das muss auch Ex-Agent Phil Broker schmerzlich feststellen: Nach dem Tod seiner Frau zieht er zusammen mit seiner Tochter Maddy in eine Kleinstadt, um seine Arbeit in einer Drogenbekämpfungsbehörde hinter sich zu lassen. Doch der Zufall will es, dass Maddy in der neuen Schule ausgerechnet vom Neffen von Gator Bodine, dem hiesigen Drogenboss, drangsaliert wird. Da sie sich aber gekonnt mit Schlägen wehrt, bleibt die Sache nicht ohne Folgen. Gator will Broker nun Angst einjagen und durchsucht sein Haus. Ihm wird schnell klar, dass Broker ein Agent in der Drogenbekämpfung war und sieht nun sein eigenes Imperium in Gefahr. Mit einer Privatarmee rückt er gnadenlos gegen Broker vor, der nicht nur seine Tochter schützen muss, sondern auch der Stadt Beistand leistet. Als dann aber Maddy entführt wird, kennt Broker kein Erbarmen und versucht Gator das Handwerk zu legen.
+
  <p>         
 </p>
      <a href="https://tv.vitaforas.de/fut.mp4">
