Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@ Neu:
 1985 stürzt ein randvoll mit Kokain beladenes Flugzeug irgendwo im Nirgendwo über den Wäldern Georgias ab. Sind die mehr als 200 Kilogramm Rauschgift und damit potenziell eine ganze Menge Geld also für immer verloren? Die Eigentümer, eine Handvoll Kriminelle, wollen es eher nicht darauf ankommen lassen und vor Ort lieber auf Nummer sichergehen. Auf der Suche nach dem wertvollen Stoff merken sie jedoch, dass jemand anderes schneller als sie war. Denn fündig geworden ist nämlich ein riesiger Schwarzbär. Und der dreht nun völlig zugedröhnt am Rad. Touristen, ein paar Teenager, Polizisten und auch die Gangster passen auf Koks super ins Beuteschema des monströsen Tieres. Jetzt heißt es nur noch eins: überleben und hoffen, dass die pelzige Kampfmaschine irgendwann von ihrem Trip runterkommt. Doch der Bär ist auf den Geschmack gekommen und will immer mehr von dem weißen Pulver.  
 Basierend auf wahren Begebenheiten:
 
+
+
+ <p>         
+</p>         
+
+     <a href="https://zero.vitaforas.de/mnt/ssd/ghost.mp4">
+<img src="https://zero.vitaforas.de/mnt/ssd/ghost.jpg" alt="26" width="100%" height="auto"></a>
+
+In der heruntergekommenen Grenzstadt Samurai Town wird der Bankräuber Hero (Nicolas Cage) vom wohlhabenden Gouverneur (Bill Moseley) aus dem Gefängnis geholt, weil dessen Adoptiv-Enkelin Bernice (Sofia Boutella) verschwunden ist. Der Gouverneur bietet dem Gefangenen seine Freiheit an, wenn er die Ausreißerin wiederfindet. In einen Lederanzug gekleidet, der mit zahlreichen Sprengsätzen ausgestattet ist, damit der Retter nicht auf falsche Gedanken kommt, und sich innerhalb von fünf Tagen selbst zerstört, macht sich der Namenlose auf die Suche nach der jungen Frau, in das sogenannte Ghostland, eine postapokalyptische Einöde, die das Samurai Town umgibt. Tatsächlich findet der Held Bernice schnell, doch kann er mit ihr entkommen, bevor ihn die Bewohner des Ghostland schnappen oder er in die Luft gejagt wird?
+
  <p>         
 </p>         
 
