Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -730,6 +730,13 @@ Musik
 <p>         
 </p>         
 
+     <a href="https://zero.vitaforas.de/dev/sda1/ghost.mp4">
+<img src="https://zero.vitaforas.de/dev/sda1/ghost.jpg" alt="26" width="100%" height="auto"></a>
+
+
+<p>         
+</p>         
+
      <a href="https://zero.vitaforas.de/mnt/samba/ghost.mp4">
 <img src="https://zero.vitaforas.de/mnt/samba/ghost.jpg" alt="26" width="100%" height="auto"></a>
 
