Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -122,8 +122,12 @@ Basierend auf wahren Begebenheiten:
 
 
 
- 
+  <a href="https://tv.vitaforas.de/moon.mp4">
+<img src="https://tv.vitaforas.de/moon.jpg" alt="26" width="100%" height="auto"></a>
 
+
+ <a href="https://tv.vitaforas.de/erde2.mp4">
+<img src="https://tv.vitaforas.de/erde2.jpg" alt="26" width="100%" height="auto"></a>
  <p>         
 </p>         
 
