Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@ Basierend auf wahren Begebenheiten:
 
  <a href="https://tv.vitaforas.de/erde2.mp4">
 <img src="https://tv.vitaforas.de/erde2.jpg" alt="26" width="100%" height="auto"></a>
+
+
+ <a href="https://tv.vitaforas.de/two.mp4">
+<img src="https://tv.vitaforas.de/two.jpg" alt="26" width="100%" height="auto"></a>
+
  <p>         
 </p>         
 
