--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ Basierend auf wahren Begebenheiten:
 <img src="https://tv.vitaforas.de/erde2.jpg" alt="26" width="100%" height="auto"></a>
 
 
- <a href="https://tv.vitaforas.de/two.mp4">
-<img src="https://tv.vitaforas.de/two.jpg" alt="26" width="100%" height="auto"></a>
+ <a href="https://tv.vitaforas.de/2.mp4">
+<img src="https://tv.vitaforas.de/2.jpg" alt="26" width="100%" height="auto"></a>
 
  <p>         
 </p>         
