Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -858,6 +858,17 @@ video.play();
        <p>
 </p>
        🔧 Hosted in Germany 🇩🇪
+
+ <p>         
+</p>
+
+<a href="http://123.vitaforas.de/paw.mp4">
+<img src="http://123.vitaforas.de/paw.jpg" alt="13" width="100%" height="auto"></a>
+
+Ein geheimnisvoller Meteorit schlägt in Adventure City ein und verleiht den vierbeinigen Mitgliedern der Paw Patrol übernatürliche Kräfte - sie werden zur Mighty Patrol! Für Hündchen Skye etwa geht damit ein großer Traum in Erfüllung – der allerdings auch so manch neue Gefahren mit sich bringt. Der Erzrivale der Paw Patrol - Humdinger - bricht aus dem Gefängnis aus und schließt sich mit der verrückten Wissenschaftlerin Victoria Vance zusammen, um die Superkräfte der Welpen zu stehlen und sich so selbst in Superschurken zu verwandeln. Es ist nun an den Mighty Pups Adventure City zu beschützen und die Schurken aufzuhalten, bevor es zu spät ist. Die Gruppe begibt sich auf ein neues Abenteuer, das beweist, dass selbst der kleinste Welpe großes bewegen kann. Die Retter-Welpentruppe erlebt ein ganz besonderes Kinoabenteuer.
+
+A magical meteor crash lands in Adventure City and gives the PAW Patrol pups superpowers, transforming them into The Mighty Pups.  
+
  <p>         
 </p>
 
