Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Basierend auf wahren Begebenheiten:
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/land.mp4">
-<img src="https://123.vitaforas.de/land.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/land.png" alt="26" width="100%" height="auto"></a>
 
 
 Die Grafschaft Donegal bekam einst von ihren eigenen Politikern den Beinamen „The Forgotten County“ verpasst – und ist ihn bis heute nicht mehr losgeworden. Ganz oben im westlichsten Zipfel von Irland liegt sie – und es passt wie die Faust aufs Auge, dass Robert Lorenz („Back In The Game“) sein fatalistisch-melancholisches Thriller-Drama genau hier angesiedelt hat: Schließlich fühlt sich „In The Land Of Saints And Sinners“ trotz des Settings im Jahre 1974 wie ein Western an – von den Protagonist*innen über das Setup bis hin zum finalen Shootout in der örtlichen Kneipe, nur dass die hier eben Pub und nicht Saloon genannt wird. Liam Neeson („Retribution“) verkörpert als Ex-Soldat und Auftragskiller den Archetypen des in die Jahre gekommenen Revolverhelden, der mit seiner verbliebenen Zeit noch etwas Sinnvolles anstellen will. Dabei gerät er mit einer Gruppe von Gangstern aneinander.
