Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -126,16 +126,19 @@ Basierend auf wahren Begebenheiten:
   <a href="https://tv.vitaforas.de/moon.mp4">
 <img src="https://tv.vitaforas.de/moon.jpg" alt="26" width="100%" height="auto"></a>
 
+Vor Jahren strandete Kora (Sofia Boutella) in einem Raumschiff auf dem Mond Veldt irgendwo am Rande des Universums. Die Einheimischen nahmen sie freundlich auf, befürchteten aber schon immer, dass Kora von einer Welt stammt, mit der sie lieber niemals Kontakt haben würden. Sie sollen Recht behalten, denn eines Tages taucht der grausame Admiral Noble (Ed Skrein) auf, ein Abgesandter des tyrannischen Imperium-Herrschers Balisarius (Fra Fee), der Veldt unterjochen und ausbeuten möchte, wie er es schon auf vielen weiteren Planeten und Monden zuvor getan hat. Doch die Invasoren haben ihre Rechnung ohne die kämpferische Kora gemacht, die ursprünglich aus ihren eigenen Reihen stammt. Gemeinsam mit dem kriegerisch gänzlich unerfahrenen Bauern Gunnar (Michiel Huisman) bricht sie zu verschiedenen Nachbargestirnen auf, um die dortigen Bewohner davon zu überzeugen, sich einer Rebellion gegen das Imperium anzuschließen.
 
 <p>         
 </p>    <a href="https://tv.vitaforas.de/erde2.mp4">
 <img src="https://tv.vitaforas.de/erde2.jpg" alt="26" width="100%" height="auto"></a>
 
+In einer nicht allzu fernen Zukunft dehnt sich die Sonne bedrohlich aus und stellt eine existenzielle Gefahr für die Erde dar. Also beschließt die Vereinte Regierung der Erde, gigantische Raketentriebwerke zu konstruieren, um unseren Planeten von der Sonne wegzubewegen - weit weg von der Reichweite der feurigen Sonneneruptionen. Allerdings stoßen sie auf Widerstand, als Terroristen eine Matrix entwickeln, um das Bewusstsein jedes Menschen zu speichern. Die Reise durch das Universum ist jedoch gefährlich, und die letzte Überlebenschance der Menschheit hängt von einer Gruppe junger Menschen ab, die mutig genug sind, eine gefährliche Operation auf Leben und Tod durchzuführen, um die Erde zu retten.
 
 <p>         
 </p>    <a href="https://tv.vitaforas.de/2.mp4">
 <img src="https://tv.vitaforas.de/2.jpg" alt="26" width="100%" height="auto"></a>
 
+TATE randaliert, um den gewaltsamen Tod seines treuen und vertrauenswürdigen Fußsoldaten zu rächen.  Um den verantwortlichen Bösewicht aufzuspüren, wagt sich TATE über seine Komfortzone Essex hinaus in die dunkle Seite des Soho der 90er Jahre.  Er tritt gegen gewalttätige Bosse an und kämpft sich mit schierer brutaler Gewalt durch tückische Seitenstraßen.  TATE ist auf der Suche nach Rache und schreckt vor nichts zurück, selbst als die Welt um ihn herum zu explodieren beginnt.
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/land.mp4">
