Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ In einer nicht allzu fernen Zukunft dehnt sich die Sonne bedrohlich aus und stel
 <img src="https://tv.vitaforas.de/2.jpg" alt="26" width="100%" height="auto"></a>
 
 TATE randaliert, um den gewaltsamen Tod seines treuen und vertrauenswürdigen Fußsoldaten zu rächen.  Um den verantwortlichen Bösewicht aufzuspüren, wagt sich TATE über seine Komfortzone Essex hinaus in die dunkle Seite des Soho der 90er Jahre.  Er tritt gegen gewalttätige Bosse an und kämpft sich mit schierer brutaler Gewalt durch tückische Seitenstraßen.  TATE ist auf der Suche nach Rache und schreckt vor nichts zurück, selbst als die Welt um ihn herum zu explodieren beginnt.
+
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/land.mp4">
@@ -148,6 +149,17 @@ TATE randaliert, um den gewaltsamen Tod seines treuen und vertrauenswürdigen Fu
 Die Grafschaft Donegal bekam einst von ihren eigenen Politikern den Beinamen „The Forgotten County“ verpasst – und ist ihn bis heute nicht mehr losgeworden. Ganz oben im westlichsten Zipfel von Irland liegt sie – und es passt wie die Faust aufs Auge, dass Robert Lorenz („Back In The Game“) sein fatalistisch-melancholisches Thriller-Drama genau hier angesiedelt hat: Schließlich fühlt sich „In The Land Of Saints And Sinners“ trotz des Settings im Jahre 1974 wie ein Western an – von den Protagonist*innen über das Setup bis hin zum finalen Shootout in der örtlichen Kneipe, nur dass die hier eben Pub und nicht Saloon genannt wird. Liam Neeson („Retribution“) verkörpert als Ex-Soldat und Auftragskiller den Archetypen des in die Jahre gekommenen Revolverhelden, der mit seiner verbliebenen Zeit noch etwas Sinnvolles anstellen will. Dabei gerät er mit einer Gruppe von Gangstern aneinander.
  <p>         
 </p>         
+
+
+  
+ <a href="https://123.vitaforas.de/fearless.mp4">
+<img src="https://123.vitaforas.de/fearless.png" alt="26" width="100%" height="auto"></a>
+
+
+
+Max Klein spendet bei einem Flugzeugabsturz Trost und führt die Überlebenden aus der Flammenhölle. In der Folge hält er sich für auserwählt und unverletzlich. Dabei taumelt er in eine Lebenskrise, die ihn von seiner Familie entzweit. Seine letzte Verbindung zum Leben ist eine traumatisierte Mutter, die ebenfalls an Bord des Flugzeugs war. Max hofft, wieder ins normale Leben zurückzufinden, indem er sie von ihrem Schuldkomplex erlöst, sie wäre verantwortlich für den Tod ihres Kindes. Nach einer Reihe von Hollywood-gerechten Hits ("Club der toten Dichter", "Green Card") nähert sich Peter Weir in seinem todernsten Mysterienspiel wieder der Konventionslosigkeit seiner australischen Filme.
+<p>         
+</p> 
 
      <a href="https://zero.vitaforas.de/suzume.mp4">
 <img src="https://zero.vitaforas.de/suzume.jpg" alt="26" width="100%" height="auto"></a>
