Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@ TATE randaliert, um den gewaltsamen Tod seines treuen und vertrauenswürdigen Fu
 
 <p>         
 </p>   
+ <a href="https://123.vitaforas.de/dive.mp4">
+<img src="https://123.vitaforas.de/dive.png" alt="26" width="100%" height="auto"></a>
+
+
+Naomi ist eine erfahrene Weltumseglerin und Tauchlehrerin, die sich auf eine Solo-Reise begibt, um ihren Freund Jackson in Grenada zu treffen. Ihre relativ entspannte dreitägige Fahrt auf der 47-Fuß-Yacht "The Serenity" nimmt jedoch eine unerwartet dunkle Wendung, als ein Sturm sie von ihrem geplanten Kurs abbringt. Nach dem Abflauen des Sturms zieht Naomi zwei Schiffbrüchige aus dem Meer. Schon bald stellt sich heraus, dass die beiden Gangster sind, die auf der Suche nach einer im Meer versenkten Kokainladung sind und ihre Retterin für die Bergung zu missbrauchen. Survival-Thriller, in dem eine Taucherin zwei mysteriöse Schiffbrüchige an Bord nimmt und später von Haien attackiert wird.
+<p>         
+</p>   
  <a href="https://123.vitaforas.de/land.mp4">
 <img src="https://123.vitaforas.de/land.png" alt="26" width="100%" height="auto"></a>
 
