--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@ In einer nicht allzu fernen Zukunft dehnt sich die Sonne bedrohlich aus und stel
 
 TATE randaliert, um den gewaltsamen Tod seines treuen und vertrauenswürdigen Fußsoldaten zu rächen.  Um den verantwortlichen Bösewicht aufzuspüren, wagt sich TATE über seine Komfortzone Essex hinaus in die dunkle Seite des Soho der 90er Jahre.  Er tritt gegen gewalttätige Bosse an und kämpft sich mit schierer brutaler Gewalt durch tückische Seitenstraßen.  TATE ist auf der Suche nach Rache und schreckt vor nichts zurück, selbst als die Welt um ihn herum zu explodieren beginnt.
 
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/mission.mp4">
+<img src="https://123.vitaforas.de/mission.jpg" alt="26" width="100%" height="auto"></a>
+
+
+
+Als eine mächtige Explosion den Kreml in Moskau erschüttert, stehen Agent Ethan Hunt (Tom Cruise) und seine Impossible Mission Force (IMF) plötzlich als Hauptverdächtige im Fokus. Und tatsächlich hat sich der Geheimagent mit seinem Partner Dunn (Simon Pegg) während des Anschlags im Kreml befunden, das Attentat aber nicht zu verantworten. Der Druck wird so groß, dass der US-Präsident das Phantom-Protokoll ausruft. Von nun an wird die Elitetruppe IMF verleugnet und muss im Untergrund nach den Hintermännern fanden. Ein Soziopath namens Cobolt (Michael Nyqvist) hat geheime Abschusscodes für russische Nuklearraketen erbeutet, Hunt will sie ihm abjagen, um einen Atomkrieg zu verhindern. Während die Fahndung nach Cobolt das IMF-Team mit Unterstützung des Innendienstlers William Brandt (Jeremy Renner) nach Dubai führt, droht das Attentat einen neuen Kalten Krieg zwischen den Supermächten USA und Russland zu verursachen und einen Kampf auszulösen.
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/dive.mp4">
