Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -157,6 +157,17 @@ Als eine mächtige Explosion den Kreml in Moskau erschüttert, stehen Agent Etha
 
 
 Naomi ist eine erfahrene Weltumseglerin und Tauchlehrerin, die sich auf eine Solo-Reise begibt, um ihren Freund Jackson in Grenada zu treffen. Ihre relativ entspannte dreitägige Fahrt auf der 47-Fuß-Yacht "The Serenity" nimmt jedoch eine unerwartet dunkle Wendung, als ein Sturm sie von ihrem geplanten Kurs abbringt. Nach dem Abflauen des Sturms zieht Naomi zwei Schiffbrüchige aus dem Meer. Schon bald stellt sich heraus, dass die beiden Gangster sind, die auf der Suche nach einer im Meer versenkten Kokainladung sind und ihre Retterin für die Bergung zu missbrauchen. Survival-Thriller, in dem eine Taucherin zwei mysteriöse Schiffbrüchige an Bord nimmt und später von Haien attackiert wird.
+
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/tron.mp4">
+<img src="https://123.vitaforas.de/tron.png" alt="26" width="100%" height="auto"></a>
+
+
+
+Das Jahr 1989 sieht den Aufstieg des Computer-Virtuosen Kevin Flynn (Jeff Bridges) zum Großunternehmer – und sein plötzliches Verschwinden. Lange Jahre glaubt sein inzwischen erwachsen gewordener Sohn Sam (Garrett Hedlund), der alter Herr hätte sich aus dem Staub gemacht. Doch eines Tages lernt er die erstaunliche Wahrheit: Flynn sitzt seit einem Vierteljahrhundert in seiner eigenen Computer-Welt TRON fest – als Gefangener seines Spiegelbildes CLU (digital verjüngt: Jeff Bridges), einer KI, die mit tyrannischer Härte über die virtuellen Weiten des Rasters herrscht. Um CLUs Pläne zu durchkreuzen, muss sich Sam mit seinem Vater versöhnen und die reizend-naive Cyber-Dame Quorra (Olivia Wilde) beschützen. Denn die trägt ein Geheimnis in sich, das den Lauf beider Welten für immer verändern könnte...
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/land.mp4">
